[package]
name = "racc"
version = "0.0.2"
authors = ["Arlie Davis <arlie.davis@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "RACC is a port of Berkeley YACC to Rust, and allows you to write grammar definitions directly in Rust source code."

[lib]
name = "racc"
crate-type = ["dylib"]

[dependencies.log]
log = "0.1.19"
