[package]
name = "racc"
version = "0.0.2"
authors = ["Arlie Davis <arlie.davis@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "RACC is a port of Berkeley YACC to Rust, and allows you to write grammar definitions directly in Rust source code."
edition = "2018"

[lib]
name = "racc"
proc-macro = true

[dependencies]
log = "0.4.*"
syn = { version = "1.0.3", features = ["full"] }
quote = "1.0.2"
proc-macro2 = "1.0.1"

[dev-dependencies]
racc = { path = "../racc" }
racc_runtime = { path = "../racc_runtime" }
log = "0.4.*"
env_logger = "0.6"
