[package]
name = "racc"
version = "0.0.4"
authors = ["Arlie Davis <arlie.davis@gmail.com>"]
readme = "../README.md"
license = "MIT"
description = "RACC is a port of Berkeley YACC to Rust, and allows you to write grammar definitions directly in Rust source code."
edition = "2018"

[lib]
name = "racc"
proc-macro = true

[dependencies]
log = { version = "0.4.*", features = ["release_max_level_warn"] }
syn = { version = "1.0.3", features = ["full", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.1"
ramp_table = "0.1.0"

[dev-dependencies]
racc_runtime = { path = "../racc_runtime" }
log = "0.4.*"
env_logger = "0.6"
static_init.workspace = true

[features]
racc_log = []
default = ["racc_log"]
